--- a/contactus.html
+++ b/contactus.html
@@ -42,11 +42,11 @@
     <footer>
         <div class="footer_images">
 
-            <a href="https://www.facebook.com/"><img class="icon" src="images/facebook.png"></a>
-            <a href="https://www.snapchat.com/"><img class="icon" src="images/snapchat.png"></a>
-            <a href="https://www.pinterest.com/"><img class="icon" src="images/pinterest.png"></a>
-            <a href="https://www.instagram.com/"><img class="icon" src="images/instragram.png"></a>
-            <a href="https://twitter.com/"><img class="icon" src="images/twitter.png"></a>
+            <a href="https://www.facebook.com/"><img class="icon" src="images/facebook.png" alt="facebook footer"></a>
+            <a href="https://www.snapchat.com/"><img class="icon" src="images/snapchat.png" alt="snapchat footer"></a>
+            <a href="https://www.pinterest.com/"><img class="icon" src="images/pinterest.png" alt="pinterest footer"></a>
+            <a href="https://www.instagram.com/"><img class="icon" src="images/instragram.png" alt="instagram footer"></a>
+            <a href="https://twitter.com/"><img class="icon" src="images/twitter.png" alt="twitter footer"></a>
         </div>
     </footer>
 </body>
