--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
         <div class="top_container">
             <div class="top_image_container">
-                <img class="home_image" src="images/home_image.jpg">
+                <img class="home_image" src="images/home_image.jpg" alt="home image">
             </div>
             <div class="top_text_container">
                 <p>Welcome to Pedro Photography! This is our homepage, feel free to navigate around our website! Meet the team below! 
@@ -48,7 +48,7 @@
         <div class="bottom_container">
             <div class="person_container">
                 <div class="person_image">
-                    <img src="images/stock1.jpg">
+                    <img src="images/stock1.jpg" alt="Stock image one">
                 </div>
                 <div class="person_text">
                     <p>John Smith</p>
@@ -57,7 +57,7 @@
             </div>
             <div class="person_container">
                 <div class="person_image">
-                    <img src="images/stock2.jpg">
+                    <img src="images/stock2.jpg" alt="Stock image two">
                 </div>
                 <div class="person_text">
                     <p>Jennifer Olsen</p>
@@ -66,7 +66,7 @@
             </div>
             <div class="person_container">
                 <div class="person_image">
-                    <img src="images/stock3.jpg">
+                    <img src="images/stock3.jpg" alt="Stock image three">
                 </div>
                 <div class="person_text">
                     <p>Pedro King</p>
@@ -75,7 +75,7 @@
             </div>
             <div class="person_container">
                 <div class="person_image">
-                    <img src="images/stock4.jpg">
+                    <img src="images/stock4.jpg" alt="Stock image four">
                 </div>
                 <div class="person_text">
                     <p>Andrea Peterson</p>
@@ -84,7 +84,7 @@
             </div>
             <div class="person_container">
                 <div class="person_image">
-                    <img src="images/stock5.jpg">
+                    <img src="images/stock5.jpg" alt="Stock image five">
                 </div>
                 <div class="person_text">
                     <p>Allison Stone</p>
@@ -96,11 +96,11 @@
     <footer>
         <div class="footer_images">
 
-            <a href="https://www.facebook.com/"><img class="icon" src="images/facebook.png"></a>
-            <a href="https://www.snapchat.com/"><img class="icon" src="images/snapchat.png"></a>
-            <a href="https://www.pinterest.com/"><img class="icon" src="images/pinterest.png"></a>
-            <a href="https://www.instagram.com/"><img class="icon" src="images/instragram.png"></a>
-            <a href="https://twitter.com/"><img class="icon" src="images/twitter.png"></a>
+            <a href="https://www.facebook.com/"><img class="icon" src="images/facebook.png" alt="facebook footer"></a>
+            <a href="https://www.snapchat.com/"><img class="icon" src="images/snapchat.png" alt="snapchat footer"></a>
+            <a href="https://www.pinterest.com/"><img class="icon" src="images/pinterest.png" alt="pinterest footer"></a>
+            <a href="https://www.instagram.com/"><img class="icon" src="images/instragram.png" alt="instagram footer"></a>
+            <a href="https://twitter.com/"><img class="icon" src="images/twitter.png" alt="twitter footer"></a>
         </div>
     </footer>
 </body>
